# CodeWars_Katas

./: .gitignore  README.adoc  README.md
CodeWars_Katas/: README.adoc
Katas/: build.gradle
c/: .gitignore  Makefile
c-lang/sum_dig_pow/: out  sum_dig_pow  sum_dig_pow.c
c/snippets/: arr_init.c  debug.c
c/src/5kyu/Beeramid/: beeramid.c  (+2 more)
clojure-katas/clojure-katas/: CHANGELOG.md  README.md  project.clj
csharp/CSharp_Katas/: .gitignore  CSharp_Katas.sln
dart-katas/: .gitignore  pubspec.yaml
dart-katas/test/: dart_katas_test.dart
fsharp/FSharpKatas/: FSharpKatas.sln
go/: go.mod  two_fighters.go
java-katas/: .project
kotlin-katas/: build.gradle.kts
py-katas/: Abbreviate-a-Two-Word-Name.py  Are_they_the_same.py  Ceasar_Cipher.py  Convert_number_to_reversed_array_of_digits.py  Convert_number_to_reversed_array_of_digits_test.py  Multiples_of_3_or_5.py  Sum_of_Digits.py  mumbling.py  reverseStuff.py  test_Sum_of_Digits.py
py-katas/kyu5/: perfect_power.py  test_perfect_power.py
py-katas/kyu6/: GCF.py  test_GCF.py
rust-katas/: Cargo.toml
rust-katas/src/main/: main.rs
rust-katas/src/main/kyu6/: duplicate_encode.rs  mod.rs  narcissistic_num.rs  persistent_bugger.rs  statistics_for_an_athletic_association.rs  ten_minute_walk.rs  your_order_please.rs
rust-katas/src/main/kyu7/: check_the_exam.rs  least_larger.rs  mod.rs
src/JUnit/: BrainLuckTest.java  JosephusTest.java  ListTests.java  StripCommentsTest.java  TimeFormatterTest.java
src/Kata/: AreSame.java  BrainLuck.java  Josephus.java  Kata.java  Line.java  StripComments.java  TimeFormatter.java
(+284 files in other folders)
